--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "next-carrot",
-  "version": "0.1.0",
+  "name": "carrot-market",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,14 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.14.6",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "next": "13.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "next": "^12.0.7",
+    "react": "^18.0.0-rc.0",
+    "react-dom": "^18.0.0-rc.0"
+  },
+  "devDependencies": {
+    "@types/node": "17.0.8",
+    "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.1",
+    "eslint": "8.6.0",
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.11",
+    "typescript": "4.5.4"
   }
 }
