--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.0.7",
-    "react": "^18.0.0-rc.0",
-    "react-dom": "^18.0.0-rc.0"
+    "next": "^12.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
