feat: #9 토큰추가, 문자보내기, 이메일보내기 기능 추가
- 문자 : twilio
- 이메일 : Mailtrap, nodemailer

--- a/.env
+++ b/.env
@@ -5,3 +5,15 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://127.0.0.1:3306/carrot-market"
+
+TWILIO_SID=""
+TWILIO_TOKEN=""
+TWILIO_MSID=""
+MY_PHONE_NUMBER=""
+
+SMTP_HOST=""
+SMTP_PORT=""
+SMTP_EMAIL=""
+SMTP_PASSWORD=""
+FROM_EMAIL=""
+FROM_NAME=""
