--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.15.0",
+    "@types/nodemailer": "^6.4.8",
     "next": "^12.3.4",
+    "nodemailer": "^6.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
-    "@prisma/client": "^4.15.0"
+    "twilio": "^4.13.0"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
