feat: #9 세션, 쿠키 이용해서 로그인 기능 추가
- iron-session

--- a/.env
+++ b/.env
@@ -17,3 +17,5 @@ SMTP_EMAIL=""
 SMTP_PASSWORD=""
 FROM_EMAIL=""
 FROM_NAME=""
+
+COOKIE_PASSWORD="fdsafsd32424234fsadl;fjsadlkf;jl;k23j4234324fdsf23432f";
