--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^4.16.2",
     "@types/nodemailer": "^6.4.8",
+    "iron-session": "^6.3.1",
     "next": "^12.3.4",
     "nodemailer": "^6.9.3",
     "react": "^18.2.0",
@@ -24,7 +25,7 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
-    "prisma": "^4.15.0",
+    "prisma": "^4.16.2",
     "tailwindcss": "^3.0.11",
     "typescript": "4.5.4"
   }
