--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
+    "swr": "^2.2.0",
     "twilio": "^4.13.0"
   },
   "devDependencies": {
